tests/baselines/reference/structWithPredefinedTypesAsNames2.errors.txt
tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames2.ts(3,8): error TS1003: Identifier expected.


==== tests/cases/conformance/structs/structDeclarations/structWithPredefinedTypesAsNames2.ts (1 errors) ====
    // classes cannot use predefined types as names
    
    struct void {}
           ~~~~
!!! error TS1003: Identifier expected.